--- a/app/views/studies/curate.html.erb
+++ b/app/views/studies/curate.html.erb
@@ -8,7 +8,7 @@
   <%= render 'regions/base_form', :region => @region %>
 
   <button type="button" class="btn btn-primary" onclick="saveRegion();">
-    <i class="icon-edit icon-white"></i> Save
+    <i class="icon-ok icon-white"></i> Save
   </button>
   <button type="button" class="btn btn-primary" onclick="$('#delete-region-modal').modal('toggle')">
     <i class="icon-trash icon-white"></i> Delete
@@ -37,7 +37,7 @@
   </div>
   <div class="modal-body" align="left">
     <p>
-      Kepp in mind:
+      Keep in mind:
       <ul>
         <li>Deleting an area is irreversible.</li>
         <li>Any votes referencing images in this area will be lost.</li>
