--- a/app/views/comparisons/_listbystudy.html.erb
+++ b/app/views/comparisons/_listbystudy.html.erb
@@ -36,7 +36,7 @@ numbers as the values in an array -->
     <td><%= @location.latitude.round(4) %></td>
     <td><%= @location.longitude.round(5) %></td>
     <td><%= counts[0] %> / <%= counts[0].to_i + counts[1].to_i %></td>
-    <td><%= (counts[0].to_i / ((counts[0].to_i + counts[1].to_i).nonzero? || 1) * 100).round %> %</td>
+    <td><%= (counts[0].to_f / ((counts[0].to_f + counts[1].to_f).nonzero? || 1) * 100).round %> %</td>
     </tr>
   <% end %>
 </table>
