--- a/app/views/studies/analyze.html.erb
+++ b/app/views/studies/analyze.html.erb
@@ -1,28 +1,5 @@
-<%= render 'header', :study => @study %>
 
-<p>Todo: analyze stuff</p>
-
-<p>
-  <strong>Description</strong><br />
-  <%= @study.description %>
-</p>
-<p>
-  <strong>Question</strong><br />
-  Which place looks <%= @study.question %>?
-</p>
-
-<h3>Results</h3>
-<div class="navbar analyze-options">
-  <div class="navbar-inner">
-    <div class="container">
-      <ul class="nav">
-        <li class="<%= 'active' if url_for() == url_for(:controller => "studies", :action => "curate", :id => @study) %>"><a href="#">Summary</a></li>
-        <li>class="<%= 'active' if url_for() == url_for(:controller => "studies", :action => "curate", :id => @study) %>"><a href="#">Heatmap</a></li>
-        <li class="<%= 'active' if url_for() == url_for(:controller => "studies", :action => "curate", :id => @study) %>"><a href="#">Download</a></li>
-      </ul>
-    </div>
-  </div>
-</div>
+<%= render 'heatmap', :study => @study %>
 <%= render 'comparisons/listbystudy', :study => @study %>
 
 <!-- MF do we want this to be a link out to an image set view? -->
