Removed bottom trio from all but the home page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,9 +42,11 @@
             <%= yield %>
           </div>
         </div>
+        <% if request.path == root_path -%>
         <div class="row" id="bottom-trio">
           <%= render "layouts/bottom_trio" %>
         </div>
+        <% end -%>
       </div>
 
         </div>
