--- a/app/views/studies/summary.html.erb
+++ b/app/views/studies/summary.html.erb
@@ -1,2 +1,20 @@
-<%= render 'analyze_header', :study => @study %>
-<%= render 'comparisons/listbystudy', :study => @study %>
+<%= render 'analyze_header', :study => @study -%>
+
+<table class="table table-striped table-hover">
+  <tr>
+    <th>Location</th>
+    <th>Latitude</th>
+    <th>Longitude</th>
+    <th>Times Picked (out of total votes)</th>
+    <th>Weighted percent</th>
+  </tr>
+  <% @study.locations.each do |location| -%>
+  <tr>
+    <td width="150"><a href="/locations/<%= location.id %>"><img src="http://maps.googleapis.com/maps/api/streetview?size=150x80&location=<%= location.latitude %>,%20<%= location.longitude %>&sensor=false" /></a></td>
+    <td><%= location.latitude.round(5) %></td>
+    <td><%= location.longitude.round(5) %></td>
+    <td><%= location.score(@study.id) %> / <%= location.total(@study.id) %></td>
+    <td><%= (location.normalized(@study.id) * 100).round %> %</td>
+  </tr>
+  <% end %>
+</table>
