draft two of styling; larger images; footer with connect bar; trio shortened and added as footer

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -21,7 +21,7 @@ $black: #000000;
   }
 
 @import "bootstrap";
-
+@import "bootstrap-responsive";
 
 
 body {
@@ -36,31 +36,55 @@ body {
   margin: 30px 10px 0 0;
   }
 
-#bottom-trio {
+
+#contact-bar {
+  width: 100%;
+  background-color: $darkgray;
+  border-top: solid 2px $darkred;
+  border-bottom: solid 2px $darkred;
+  /* not sure about this, dealing with offset */
+  margin: 50px 0 0 30px;
+  text-align: center;
+  height: 70px;
+  .container a {
+    position: relative;
+    float: right;
+  	img {
+  	  padding: 10px;
+  	  }
+  	}
+  a:hover {
+    opacity: .8;
+    }
+  }
+  
+#contact-text {
+  position: relative;
+  float: right;
+  color: $white;
+  padding: 25px;
+  font-size: 28px;
+  }
+
+#trio-bar {
+  width: 100%;
+  /* not sure about this, dealing with offset */
+  margin-left: 20px;
+  margin-top: 10px;
+  }
+  
+.trio-text {
   .span4 {
-    background-color: $gray;
-    border: 1px;
-    color: $darkgray;
-    @include rounded-corners;
-    margin-top: 40px;
-    padding-bottom: 6px;
-    height: 380px;
-    p {
-      padding: 10px 20px 0 20px;
+    img {
+      position: relative;
+      float: left;
+      padding: 5px 5px 0 0;
       }
     a {
       color: $darkred;
       }
-    h3 {
-      margin-bottom: 18px;
-      }
-    .ss-icon {
-      position: relative;
-      float: left;
-      }
+    }
   }
-  padding-bottom: 30px;
-}
 
 .vote-button {
   background: url('SS-vote-btn.png') no-repeat center;
@@ -142,7 +166,6 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
 
 .navbar .brand {
   padding: 5px;
-  margin-left: 4px;
   }
 
 @media (max-width: 767px) {
@@ -158,13 +181,7 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
   position: absolute;
   }
 
-.TC-icon {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  }
 
-@import "bootstrap-responsive";
 
 .curate a.thumbnail {
   width:220px;
