--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -42,16 +43,13 @@
             <%= yield %>
           </div>
         </div>
-        <% if request.path == root_path -%>
-        <div class="row" id="bottom-trio">
-          <%= render "layouts/bottom_trio" %>
-        </div>
-        <% end -%>
-      </div>
-
-        </div>
       </div> <!--! end of .container -->
     </div> <!--! end of #main -->
+    
+    <div class="row" id="footer">
+          <%= render "layouts/footer" %>
+        </div>
+    
     <%= yield :scripts %>
     <script type="text/javascript">
       $('.label-with-popover').popover();
