--- a/app/views/studies/summary.html.erb
+++ b/app/views/studies/summary.html.erb
@@ -8,13 +8,14 @@
     <th>Times Picked (out of total votes)</th>
     <th>Weighted percent</th>
   </tr>
-  <% @study.locations.each do |location| -%>
+  <% @study.results.each do |location| 
+    total = location['chosen'].to_i + location['rejected'].to_i -%>
   <tr>
-    <td width="150"><a href="/locations/<%= location.id %>"><img src="http://maps.googleapis.com/maps/api/streetview?size=150x80&location=<%= location.latitude %>,%20<%= location.longitude %>&sensor=false" /></a></td>
-    <td><%= location.latitude.round(5) %></td>
-    <td><%= location.longitude.round(5) %></td>
-    <td><%= location.score(@study.id) %> / <%= location.total(@study.id) %></td>
-    <td><%= (location.normalized(@study.id) * 100).round %> %</td>
+    <td width="150"><a href="/locations/<%= location['id'] %>"><img src="http://maps.googleapis.com/maps/api/streetview?size=150x80&location=<%= location['latitude'] %>,%20<%= location['longitude'] %>&heading=<%= location['heading'] %>&pitch=<%= location['pitch'] %>&sensor=false" /></a></td>
+    <td><%= location['latitude'].to_f.round(5) %></td>
+    <td><%= location['longitude'].to_f.round(5) %></td>
+    <td><%= location['chosen'].to_i %> / <%= total %></td>
+    <td><%= (location['chosen'].to_f / (total.nonzero? || 1).to_f * 100).round %> %</td>
   </tr>
   <% end %>
 </table>
