--- a/app/views/studies/download.html.erb
+++ b/app/views/studies/download.html.erb
@@ -1,1 +1,8 @@
 <%= render 'analyze_header', :study => @study %>
+<p class="text-center">
+  Export the results of your survey to a Comma Separated Value (CSV) file or to a Microsoft Excel workbook (XLS).
+</p>
+<p class="study-download-buttons text-center">
+  <a class="btn btn-large btn-primary" href="<%= url_for :controller => "studies", :action => "results", :format => "csv", :id => @study %>">Download CSV</a>
+  <a class="btn btn-large" href="<%= url_for :controller => "studies", :action => "results", :format => "xls", :id => @study %>">Download XLS</a>
+</p>
