--- a/app/views/studies/curate.html.erb
+++ b/app/views/studies/curate.html.erb
@@ -17,7 +17,7 @@
   </div>
   <div style="float:left;width:500px;">
     <div id="map" class="map" style="float:right; width:500; height:350;"></div>
-    <button type="button" class="btn btn-primary" onclick="addPoints();">
+    <button type="button" class="btn btn-primary" onclick="curate.addPoints();">
       <i class="icon-search icon-white"></i> Find
     </button>
     a total of
@@ -25,7 +25,7 @@
     points at least
     <input id="proximity" type="textfield" style="width:50px;" value="50" />
     meters apart.
-    <div id="found-id" style="font-size:larger;">Found <strong><%= @region.locations.length %></strong> images.</div>
+    <div style="font-size:larger;">Found <strong><span id="location-count"><%= @region.locations.length %></span></strong> images.</div>
 
   </div>
 </div>
@@ -45,7 +45,7 @@
     </p>
   </div>
   <div class="modal-footer">
-    <a id="delete_image" class="btn btn-primary cursor" onclick="deleteRegion();">Confirm Delete</a>
+    <a id="delete_image" class="btn btn-primary cursor" onclick="curate.deleteRegion();">Confirm Delete</a>
     <a class="btn cursor" data-dismiss="modal" id="close_modal">Cancel</a>
   </div>
 </div>
@@ -61,8 +61,8 @@
     <div id="panorama-map" style=""></div>
   </div>
   <div class="modal-footer">
-    <a id="save_changes" class="btn btn-primary cursor" onclick="curateHandler.updateLocation();">Save Changes</a>
-    <a id="delete_image" class="btn cursor" onclick="curateHandler.deleteLocation()">Delete Image</a>
+    <a id="save_changes" class="btn btn-primary cursor" onclick="curate.updateLocation()">Save Changes</a>
+    <a id="delete_image" class="btn cursor" onclick="curate.deleteLocation()">Delete Image</a>
     <a class="btn cursor" data-dismiss="modal" id="close_modal">Close</a>
   </div>
 </div>
@@ -71,7 +71,7 @@
   <div id="images" class="curate thumbs">
   <% @region.locations.order('id desc').each do |location| %>
     <a id="location-<%= location.id %>" class="thumbnail cursor" data-toggle="modal"
-       onclick="curateHandler.editLocation('<%= location.id %>', <%= location.latitude %> , <%= location.longitude %>, <%= location.heading %>, <%= location.pitch %>)">
+       onclick="curate.editLocation('<%= location.id %>', <%= location.latitude %> , <%= location.longitude %>, <%= location.heading %>, <%= location.pitch %>)">
       <img class="img-polaroid" src="http://maps.googleapis.com/maps/api/streetview?size=200x150&location=<%= location.latitude %>,%20<%= location.longitude %>&heading=<%= location.heading %>&pitch=<%= location.pitch %>&sensor=false" />
     </a>
   <% end %>
@@ -87,8 +87,8 @@
     <p>Are you sure you want to delete this image?</p>
   </div>
   <div class="modal-footer">
-    <a href="#" class="btn" data-dismiss="modal" onclick="curateHandler.deleteLocationCancel();">Cancel</a>
-    <a id="delete-locatio-confirm" class="btn btn-primary" onclick="curateHandler.deleteLocationConfirm();">Delete Image</a>
+    <a href="#" class="btn" data-dismiss="modal" onclick="curate.deleteLocationCancel();">Cancel</a>
+    <a id="delete-locatio-confirm" class="btn btn-primary" onclick="curate.deleteLocationConfirm();">Delete Image</a>
   </div>
 </div>
 
@@ -96,14 +96,12 @@
 <script type="text/javascript">
 
   // A handler for the curate process
-  var curateHandler;
-  var polygonHandler;
+  var curate;
 
   window.onload = function () {
 
-    curateHandler = new ss.handler.Curate(
-      'edit-location-modal', 'panorama-map', 'panorama',
-      'delete-location-modal', 'location-');
+    // Center of our map
+    var center = new google.maps.LatLng(<%= @region.latitude %>, <%= @region.longitude %>);
 
     // create polygon path
     var path = new google.maps.MVCArray;
@@ -111,70 +109,17 @@
     path.push(new google.maps.LatLng(<%= latlng[:lat] %>, <%= latlng[:lng] %>));
     <% end %>
 
-    // create polygon locations
-    var locations = new google.maps.MVCArray;
+    // Create and initialize a curate handler
+    curate = new ss.handler.Curate(<%= @region.id %>);
+    curate.initialize('map', center, <%= @region.zoom %>, path);
+
+    // Create existing markers for our map
     <% @region.locations.each do |location| %>
-    locations.push(new google.maps.LatLng(<%= location.latitude %>, <%= location.longitude %>));
+    point = new google.maps.LatLng(<%= location.latitude %>, <%= location.longitude %>);
+    curate.polygonMap.addMarker(<%= location.id %>, point);
     <% end %>
 
-    var center = new google.maps.LatLng(<%= @region.latitude %>, <%= @region.longitude %>);
-
-    polygonHandler = new ss.handler.Polygon('map', center, <%= @region.zoom %>, false, path, locations);
   }
 
-  function addPoints() {
-
-    if (ss.handler.Polygon.editable) {
-      polygonHandler.lock();
-    }
-    var oldLength = ss.handler.Polygon.locations.length;
-    polygonHandler.addPoints(
-      document.getElementById('quantity').value,
-      document.getElementById('proximity').value,
-      function() {
-        // This should fire periodically
-        var newLength = ss.handler.Polygon.locations.length;
-        $('#found-id').html('Found <strong>' + newLength + '</strong> images');
-      },
-      // this should fire every time a point is created
-      function(latLng) {
-
-        ss.Location.prototype.create(<%= @region.id %>, latLng.lat(), latLng.lng(), Math.floor(Math.random()*360), 0, function(loc, status, xhr) {
-
-          // We should append a linked image below
-          $(
-            '<a>',
-            {
-              id: 'location-' + loc.id,
-              class: 'thumbnail cursor new',
-              'data-toggle': 'modal',
-              onclick: 'curateHandler.editLocation(' + loc.id + ', ' + loc.latitude + ', ' + loc.longitude + ', ' +loc.heading + ', ' + loc.pitch + ');'
-
-            }
-          ).html('<img class="img-polaroid" src="http://maps.googleapis.com/maps/api/streetview?size=200x150'
-                + '&location=' + loc.latitude + ',%20' + loc.longitude
-                + '&heading=' + loc.heading + '&pitch=' + loc.pitch + '&sensor=false" />').prependTo('#images');
-
-        });
-
-      });
-  }
-
-  function saveRegion(){
-    region = new ss.Region(<%=@region.id%>, $('#region_name').val(), $('#region_description').val());
-    region.update(function() {
-      $('#edit-region-modal').modal('toggle');
-      $('#region-name-plain').html($('#region_name').val());
-      $('#save-notice').html('Area Saved');
-      $('#save-notice').addClass('in');
-    });
-  }
-
-  function deleteRegion(){
-    region = new ss.Region(<%=@region.id%>);
-    region.delete(function() {
-      window.location.replace('/studies/<%= @study.slug %>/vote');
-    });
-  }
 </script>
 
