Cleaned up various results items

--- a/app/views/studies/_header.html.erb
+++ b/app/views/studies/_header.html.erb
@@ -41,8 +41,8 @@ function changeActiveStatus(id, status) {
       <i class="icon-ok" style=""></i> Vote</a>
     </li>
   <!-- security - analyze should only show if study is public -->
-  <li class=<%= "active" if [url_for(:controller => "studies", :action => "summary", :id => @study), url_for(:controller => "studies", :action => "heatmap", :id => @study), url_for(:controller => "studies", :action => "download", :id => @study)].include?(url_for()) %>>
-    <a href="<%= url_for :controller => "studies", :action => "summary", :id => @study %>">
+  <li class=<%= "active" if [url_for(:controller => "studies", :action => "results", :id => @study), url_for(:controller => "studies", :action => "region_results", :id => @study), url_for(:controller => "studies", :action => "heatmap", :id => @study), url_for(:controller => "studies", :action => "download", :id => @study)].include?(url_for()) %>>
+    <a href="<%= url_for :controller => "studies", :action => "results", :id => @study %>">
       <i class="icon-signal" style=""></i> Analyze</a>
     </li>
   <!-- security - edit should only show if study is public -->
