--- a/app/views/studies/region_results.html.erb
+++ b/app/views/studies/region_results.html.erb
@@ -13,13 +13,13 @@
     <tr>
       <th>Map</th>
       <th>Name</th>
-      <th># Locations Included</th>
+      <th>Locations Included</th>
     </tr>
     <% @study.region_set.regions.each do |region| %>
       <tr>
         <td>
-          <a href="<%= url_for(region) %>"><img src="http://maps.googleapis.com/maps/api/staticmap?center=<%= region.latitude %>,<%= region.longitude %>&zoom=<%= region.zoom %>&size=150x100&sensor=false"></a></td>
-        <td><%= link_to region.name, region %></td>
+          <a href="<%= url_for(:controller => "studies", :action => "curate", :id => @study) %>?region_id=<%= region.id %>"><img src="http://maps.googleapis.com/maps/api/staticmap?center=<%= region.latitude %>,<%= region.longitude %>&zoom=<%= region.zoom %>&size=150x100&sensor=false"></a></td>
+        <td><a href="<%= url_for(:controller => "studies", :action => "curate", :id => @study) %>?region_id=<%= region.id %>"><%= region.name %></a></td>
         <td><%= region.locations.count %></td>
       </tr>
     <% end %>
