New Study link at bottom of my studies listing

--- a/app/views/studies/mine.html.erb
+++ b/app/views/studies/mine.html.erb
@@ -1,3 +1,7 @@
 <h1>My Research</h1>
 
 <%= render 'studies/list', :studies => @studies, :show_user => true  %>
+
+<br />
+
+<%= link_to 'New Study', new_study_path %>
