--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,11 +1,11 @@
 <!-- select a random study -->
-<% @study = Study.find(:all).sample(1) %>
+<% @study = Study.where(:active => true).sample(1) %>
 <!-- select 2 random locations from a random region from a region set within the study -->
 <% @regions = @study[0].region_set.regions.find(:all).sample(1) %>
 <% @locations = @regions[0].locations.find(:all).sample(2) %>
 <% @imagelink1 = "http://maps.googleapis.com/maps/api/streetview?size=570x370&location=" + @locations[0].latitude.to_s() + "%20" + @locations[0].longitude.to_s() + "&sensor=false" %>
 <% @imagelink2 = "http://maps.googleapis.com/maps/api/streetview?size=570x370&location=" + @locations[1].latitude.to_s() + "%20" + @locations[1].longitude.to_s() + "&sensor=false" %>
-<div class="row" id="display-question">  
+<div class="row" id="display-question">
   <div class="span12 text-center">
     <h3>Which image looks <%= @study[0].question %>?</h3>
   </div>
