moved verb out of hard coded question text

--- a/app/views/studies/vote.html.erb
+++ b/app/views/studies/vote.html.erb
@@ -18,7 +18,7 @@
   <% @imagelink2 = "http://maps.googleapis.com/maps/api/streetview?size=470x306&location=" + @locations[1].latitude.to_s() + "%20" + @locations[1].longitude.to_s() + "&sensor=false" %>
   <div class="row" id="display-question">
     <div class="span12 text-center">
-      <h3>Which image looks <%= @study.question %>?</h3>
+      <h3>Which image <%= @study.question %>?</h3>
     </div>
   </div>
   <div class="row text-center">
