--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,7 +7,7 @@
 <% @imagelink2 = "http://maps.googleapis.com/maps/api/streetview?size=570x370&location=" + @locations[1].latitude.to_s() + "%20" + @locations[1].longitude.to_s() + "&sensor=false" %>
 <div class="row" id="display-question">
   <div class="span12 text-center">
-    <h3>Which image looks <%= @study[0].question %>?</h3>
+    <h3>Which image <%= @study[0].question %>?</h3>
   </div>
 </div>
 <div class="row text-center">
