removed coming soon, right aligned nav, added public studies

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -4,7 +4,7 @@
   <li><%= link_to t('.help'), help_path %></li>
   <li><a href="https://www.coursera.org/course/techcity"><%= t '.technicity' %></a></li>
 
-  <!-- <li><%= link_to t('.public_studies'), studies_path %></li> -->
+  <li><%= link_to t('.public_studies'), studies_path %></li>
   <% if user_signed_in? %>
     <li><%= link_to t('.my_research'), url_for(:controller => "/studies", :action => "mine", :user_id => current_user.id) %></li>
     <li class="dropdown">
