--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,17 +22,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <div class="nav-collapse" style="padding-right: 210px;">
+          <div class="nav-collapse">
             <%= render 'layouts/navigation' %>
           </div>
         </div>
       </div>
     </div>
 
-    <!-- MF - remove in production -->
-    <div class="overlay-corner">
-    <%= link_to image_tag("SS-corner.png", :alt => "Email Us"), :notify %>
-    </div>
     <div id="main" role="main">
 
       <div class="container">
@@ -44,11 +40,11 @@
         </div>
       </div> <!--! end of .container -->
     </div> <!--! end of #main -->
-    
+
     <div class="row" id="footer">
           <%= render "layouts/footer" %>
         </div>
-    
+
     <%= yield :scripts %>
     <script type="text/javascript">
       $('.label-with-popover').popover();
