--- a/app/views/studies/mine.html.erb
+++ b/app/views/studies/mine.html.erb
@@ -4,4 +4,6 @@
 
 <br />
 
-<%= link_to 'New Study', new_study_path %>
+<button type="button" class="btn btn-primary" onclick="location.href = '<%= new_study_path %>'">
+  <i class="icon-plus-sign icon-white"></i> Create a New Study
+</button>
