put coming soon back in

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,10 @@
       </div>
     </div>
 
+    <!-- MF - remove in production -->
+    <div class="overlay-corner">
+    <%= link_to image_tag("SS-corner.png", :alt => "Email Us"), :notify %>
+    </div>
     <div id="main" role="main">
 
       <div class="container">
