--- a/app/views/studies/region_results.html.erb
+++ b/app/views/studies/region_results.html.erb
@@ -11,18 +11,23 @@
 <% else %>
   <table class="table table-striped table-hover">
     <tr>
-      <th>Map</th>
+      <th>Area</th>
       <th>Name</th>
-      <th>Locations Included</th>
-      <th>Test</th>
+      <th>Locations</th>
+      <th>Times Favored</th>
+      <th>Total Votes</th>
+      <th>Percent Favored</th>
     </tr>
-    <% @study.region_set.regions.each do |region| %>
+    <% @study.region_results.each do |region|
+      total = region['chosen'].to_i + region['rejected'].to_i -%>
       <tr>
         <td>
-          <a href="<%= url_for(:controller => "studies", :action => "curate", :id => @study) %>?region_id=<%= region.id %>"><img src="http://maps.googleapis.com/maps/api/staticmap?center=<%= region.latitude %>,<%= region.longitude %>&zoom=<%= region.zoom %>&size=150x100&sensor=false"></a></td>
-        <td><a href="<%= url_for(:controller => "studies", :action => "curate", :id => @study) %>?region_id=<%= region.id %>"><%= region.name %></a></td>
-        <td><%= region.locations.count %></td>
-        <td><%= region.chosen.where("study_id = ?", @study.id).count %> / <%= abort(@study.region_results.to_yaml) %></td>
+          <a href="<%= url_for(:controller => "studies", :action => "curate", :id => @study) %>?region_id=<%= region['id'] %>"><img src="http://maps.googleapis.com/maps/api/staticmap?center=<%= region['latitude'] %>,<%= region['longitude'] %>&zoom=<%= region['zoom'] %>&size=150x100&sensor=false"></a></td>
+        <td><a href="<%= url_for(:controller => "studies", :action => "curate", :id => @study) %>?region_id=<%= region['id'] %>"><%= region['name'] %></a></td>
+        <td><%= Region.find(region['id']).locations.count %></td>
+        <td><%= region['chosen'].to_i %></td>
+        <td><%= total %></td>
+        <td><%= (region['chosen'].to_f / (total.nonzero? || 1).to_f * 100).round %> %</td>
       </tr>
     <% end %>
   </table>
