--- a/app/views/studies/results.html.erb
+++ b/app/views/studies/results.html.erb
@@ -6,8 +6,9 @@
     <th>Latitude</th>
     <th>Longitude</th>
     <th>Region</th>
-    <th>Times Chosen / Total Votes</th>
-    <th>Percent Chosen</th>
+    <th>Times Favored</th>
+    <th>Total Votes</th>
+    <th>% Favored</th>
   </tr>
   <% @study.results.each do |location|
     total = location['chosen'].to_i + location['rejected'].to_i -%>
@@ -16,7 +17,8 @@
     <td><%= location['latitude'].to_f.round(5) %></td>
     <td><%= location['longitude'].to_f.round(5) %></td>
     <td><%= location['region_name'] %></td>
-    <td><%= location['chosen'].to_i %> / <%= total %></td>
+    <td><%= location['chosen'].to_i %></td>
+    <td><%= total %></td>
     <td><%= (location['chosen'].to_f / (total.nonzero? || 1).to_f * 100).round %> %</td>
   </tr>
   <% end %>
