--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -9,7 +9,7 @@
     <li><%= link_to t('.my_research'), url_for(:controller => "/studies", :action => "mine", :user_id => current_user.id) %></li>
     <li class="dropdown">
       <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-        <%= current_user.email %>
+        <%= current_user.username %>
         <b class="caret"></b>
       </a>
       <ul class="dropdown-menu">
