Fix no studies text

--- a/app/views/studies/_list.html.erb
+++ b/app/views/studies/_list.html.erb
@@ -3,7 +3,7 @@
   <% if !user_signed_in? %>
     <span>log in or create an account by clicking on Login at the top right.  </span>
   <% else %>
-    <span>click on New Study below.  </span></p>
+    <span>click on Create a New Study below.  </span></p>
   <% end %>
 <% else %>
 
