--- a/app/views/studies/_list.html.erb
+++ b/app/views/studies/_list.html.erb
@@ -9,14 +9,14 @@
 
   <table class="table table-striped table-hover">
     <tr>
-      <th><%= sortable "name" %></th>
-      <th><%= sortable "question", "Which image ..." %></th>
+      <th><%= sortable_column "Name", :column => "name" %></th>
+      <th>Which image ...</th>
       <% if @mine.nil? %>
-      <th><%= sortable "user_id", "User" %></th>
+      <th>User</th>
       <% end %>
       <th># Areas</th>
       <th># Votes</th>
-      <th><%= sortable "active", "Status" %></th>
+      <th><%= sortable_column "Status", :column => "active" %></th>
   </tr>
   <% @studies.each do |study| %>
     <tr>
@@ -36,7 +36,7 @@
         <% end %>
       <% elsif study.active %>
         <td><%= link_to study.name, url_for(:controller => "studies", :action => "vote", :id => study) %></td>
-        <td><%= link_to study.question, study %>?</td>
+        <td><%= link_to study.question, url_for(:controller => "studies", :action => "vote", :id => study) %>?</td>
         <% if @mine.nil? %>
           <td><%= study.user.name %></td>
         <% end %>
@@ -57,3 +57,4 @@
   <% end %>
 <% end %>
 </table>
+<%= will_paginate(@studies) %>
